<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lio_slam</name>
  <version>2.0.0</version>
  <description>LIO SLAM package for autonomous driving with ROS2</description>
  <maintainer email="sryg_zgj@163.com">zhang guojian</maintainer>
  <license>MIT</license>
  
  <url type="website">https://github.com/sryg-zgj/lio_slam</url>
  <author email="sryg_zgj@163.com">guojian zhang</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS2 核心依赖 -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>builtin_interfaces</depend>
  
  <!-- 点云处理 -->
  <depend>pcl_conversions</depend>
  
  <!-- Bag 文件读取 -->
  <depend>rosbag2_cpp</depend>
  <depend>rosbag2_storage</depend>

  <!-- 系统依赖 -->
  <build_depend>eigen</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>libopencv-dev</build_depend>
  <build_depend>libgoogle-glog-dev</build_depend>
  <build_depend>libyaml-cpp-dev</build_depend>
  <build_depend>libsuitesparse-dev</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
